--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,3 +2,10 @@ packages:
   - "apps/*"
   - "packages/*"
   - "examples/*"
+
+catalog:
+  "@types/node": ^24.10.0
+  "@types/react": ^19.2.2
+  tsdown: ^0.15.12
+  typescript: ^5.9.3
+  vitest: ^4.0.6
