--- a/packages/_template-ui/package.json
+++ b/packages/_template-ui/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.542.0",
+    "lucide-react": "^0.552.0",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.8"
   },
@@ -17,11 +17,11 @@
     "@repo/typescript-config": "workspace:*",
     "@tailwindcss/postcss": "^4.1.12",
     "@tailwindcss/typography": "^0.5.16",
-    "@types/node": "^24.3.0",
-    "@types/react": "^19.1.12",
+    "@types/node": "catalog:",
+    "@types/react": "catalog:",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.12",
-    "typescript": "^5.9.2"
+    "typescript": "catalog:"
   },
   "peerDependencies": {
     "react": ">=19.0.0"
