--- a/packages/_template/package.json
+++ b/packages/_template/package.json
@@ -9,7 +9,7 @@
   "dependencies": {},
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
-    "@types/node": "^24.3.0",
-    "typescript": "^5.9.2"
+    "@types/node": "catalog:",
+    "typescript": "catalog:"
   }
 }
