--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -43,27 +43,27 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
-    "lucide-react": "^0.554.0",
-    "next": "^16.0.3",
+    "lucide-react": "^0.562.0",
+    "next": "^16.1.0",
     "next-themes": "^0.4.6",
-    "react": "^19.2.0",
+    "react": "catalog:",
     "react-day-picker": "^9.11.1",
-    "react-dom": "^19.2.0",
-    "react-hook-form": "^7.66.1",
+    "react-dom": "catalog:",
+    "react-hook-form": "^7.69.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "vaul": "^1.1.2",
-    "zod": "^4.1.12"
+    "zod": "^4.2.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.17",
-    "@types/node": "^24.10.1",
-    "@types/react": "^19.2.6",
-    "@types/react-dom": "^19.2.3",
-    "tailwindcss": "^4.1.17",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/node": "catalog:",
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:",
+    "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5.9.3"
+    "typescript": "catalog:"
   }
 }
