--- a/packages/template-pkg-ui/package.json
+++ b/packages/template-pkg-ui/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@repo/pkg-ui",
+  "name": "@repo/template-pkg-ui",
   "version": "0.0.0",
-  "description": "Repo Package UI",
+  "description": "Template Package UI",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
