feat: Introduce core providers, UI components, state management, and type definitions, updating dependencies and linting rules.

--- a/biome.json
+++ b/biome.json
@@ -66,6 +66,9 @@
         "noUnusedVariables": "off",
         "useExhaustiveDependencies": "off"
       },
+      "nursery": {
+        "useConsistentArrowReturn": "off"
+      },
       "performance": {
         "noBarrelFile": "off",
         "noImgElement": "off",
