--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,20 +7,29 @@
     "build": "next build --turbopack",
     "start": "next start",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
-    "type-check": "tsc --noEmit"
+    "check-types": "tsc --noEmit"
   },
   "dependencies": {
     "@base-ui/react": "^1.0.0",
+    "@hookform/resolvers": "^5.2.2",
+    "@tanstack/react-query": "^5.90.12",
+    "@tanstack/react-query-devtools": "^5.91.1",
+    "@tanstack/react-table": "^8.21.3",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
     "next": "^16.1.0",
     "next-themes": "^0.4.6",
+    "nuqs": "^2.8.5",
     "react": "catalog:",
     "react-dom": "catalog:",
+    "react-hook-form": "^7.69.0",
     "shadcn": "^3.6.2",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
-    "zod": "^4.2.1"
+    "zod": "^4.2.1",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
