--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,10 +11,10 @@
   "[typescript]": {
     "editor.defaultFormatter": "biomejs.biome"
   },
-  "[javascript]": {
+  "[typescriptreact]": {
     "editor.defaultFormatter": "biomejs.biome"
   },
-  "[typescriptreact]": {
+  "[javascript]": {
     "editor.defaultFormatter": "biomejs.biome"
   },
   "[javascriptreact]": {
@@ -30,6 +30,24 @@
     "editor.defaultFormatter": "biomejs.biome"
   },
   "[graphql]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[html]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[vue]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[svelte]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[yaml]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[markdown]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[mdx]": {
     "editor.defaultFormatter": "biomejs.biome"
   }
 }
