--- a/biome.json
+++ b/biome.json
@@ -89,7 +89,8 @@
         "useForOf": "off",
         "noNonNullAssertion": "off",
         "useCollapsedElseIf": "off",
-        "noNestedTernary": "off"
+        "noNestedTernary": "off",
+        "useConsistentTypeDefinitions": "off"
       },
       "suspicious": {
         "useAwait": "off",
@@ -100,5 +101,12 @@
       }
     }
   },
-  "extends": ["ultracite/core", "ultracite/react", "ultracite/next"]
+  "extends": [
+    "ultracite/core",
+    "ultracite/react",
+    "ultracite/next",
+    "ultracite/biome/core",
+    "ultracite/biome/react",
+    "ultracite/biome/next"
+  ]
 }
