feat: add web-with-auth application with authentication features
- Create a new Next.js application with authentication capabilities.
- Implement global styles using Tailwind CSS and custom theming.
- Add reusable UI components including buttons, forms, and tables.
- Integrate Zustand for state management and React Query for data fetching.
- Set up providers for theme and query management.
- Include TypeScript support with strict type checking.
- Update existing web application scripts for consistency.
- Add necessary scripts for linting, testing, and type checking.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "dev": "turbo dev",
     "build": "turbo build",
     "clean": "turbo clean",
+    "lint": "pnpm dlx ultracite fix",
+    "test": "turbo test",
+    "test:e2e": "turbo test:e2e",
+    "db:generate": "turbo db:generate",
+    "db:migrate": "turbo db:migrate",
     "check-types": "turbo check-types",
     "hard-clean": "git clean -fdx"
   },
