--- a/apps/web-2/package.json
+++ b/apps/web-2/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack --port 3001",
-    "build": "next build --turbopack",
+    "dev": "next dev --port 3002",
+    "build": "next build",
     "start": "next start",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
     "check-types": "tsc --noEmit"
