--- a/apps/web-with-auth/package.json
+++ b/apps/web-with-auth/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "web",
+  "name": "web-with-auth",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3000",
+    "dev": "next dev --port 3001",
     "build": "next build",
     "start": "next start",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
