--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -6,15 +6,29 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
-    "check-types": "tsc -b"
+    "check-types": "tsc -b",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "better-auth:generate-db": "npx @better-auth/cli@latest generate",
+    "better-auth:migrate-db": "npx @better-auth/cli@latest migrate"
   },
   "dependencies": {
+    "@electric-sql/pglite": "^0.3.14",
     "@hono/node-server": "^1.19.9",
+    "@orpc/client": "^1.13.2",
+    "@orpc/server": "^1.13.2",
+    "axios": "^1.13.2",
+    "better-auth": "^1.4.10",
     "dotenv": "^17.2.3",
-    "hono": "^4.11.4"
+    "drizzle-orm": "^0.45.1",
+    "hono": "^4.11.4",
+    "zod": "^4.3.4"
   },
   "devDependencies": {
     "@types/node": "catalog:",
+    "drizzle-kit": "^0.31.8",
     "tsx": "^4.21.0",
     "typescript": "catalog:"
   }
