--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "lint-staged": "^16.2.7",
     "turbo": "^2.7.5",
     "typescript": "catalog:",
-    "ultracite": "7.0.11",
+    "ultracite": "7.0.12",
     "vitest": "catalog:"
   },
   "lint-staged": {
@@ -30,5 +30,10 @@
       "pnpm dlx ultracite fix"
     ]
   },
-  "packageManager": "pnpm@10.28.0"
+  "packageManager": "pnpm@10.28.0",
+  "pnpm": {
+    "overrides": {
+      "zod": "4.3.6"
+    }
+  }
 }
