feat: migrate auth schema from SQLite to PostgreSQL and update timestamp handling
- Added a new migration journal file for versioning.
- Refactored auth schema to use PostgreSQL types and updated timestamp fields to use `timestamp` instead of `integer`.
- Updated package dependencies for `drizzle-orm` to version 0.45.1 and adjusted related dependencies.
- Ensured all timestamp fields are now handled consistently across the schema.

--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -1,10 +1,11 @@
 # App Info
-APP_NAME=""
-APP_VERSION=""
+APP_NAME="server"
+APP_VERSION="0.0.0"
 BASE_URL="http://localhost:8080"
 WEB_APP_URL="http://localhost:3001"
 NATIVE_APP_SCHEME="my-app://"
 
 # Better Auth
 BETTER_AUTH_SECRET="<A randomly generated secret>"
-DATABASE_URL="file:./local.db"
+DATABASE_URL="pg://postgres:postgres@localhost:5432"
+REDIS_URL="redis://redis:redis@localhost:6379"
