--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "packageManager": "pnpm@10.28.0",
   "pnpm": {
     "overrides": {
+      "drizzle-orm": "0.45.1",
       "zod": "4.3.6"
     }
   }
