--- a/apps/web-with-auth/package.json
+++ b/apps/web-with-auth/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@orpc/client": "^1.13.4",
+    "@orpc/server": "^1.13.4",
+    "@orpc/tanstack-query": "^1.13.4",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@tanstack/react-query": "^5.90.19",
     "@tanstack/react-query-devtools": "^5.91.2",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.13.2",
+    "better-auth": "^1.4.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
