--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   "packageManager": "pnpm@10.28.1",
   "pnpm": {
     "overrides": {
+      "@tanstack/react-query": "5.90.19",
+      "better-auth": "1.4.17",
       "drizzle-orm": "0.45.1",
       "zod": "4.3.6"
     }
