Refactor code structure for improved readability and maintainability

--- a/biome.json
+++ b/biome.json
@@ -54,7 +54,8 @@
         "useKeyWithClickEvents": "off",
         "noStaticElementInteractions": "off",
         "useMediaCaption": "off",
-        "noSvgWithoutTitle": "off"
+        "noSvgWithoutTitle": "off",
+        "noNoninteractiveElementInteractions": "off"
       },
       "complexity": {
         "noForEach": "off",
