Refactor code structure for improved readability and maintainability

--- a/packages/template-pkg-ui/package.json
+++ b/packages/template-pkg-ui/package.json
@@ -32,7 +32,7 @@
     "access": "public"
   },
   "scripts": {
-    "dev": "tsdown --watch ./src",
+    "_dev": "tsdown --watch ./src",
     "build": "tsdown",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
     "check-types": "tsc --noEmit",
