--- a/packages/better-auth-hook/package.json
+++ b/packages/better-auth-hook/package.json
@@ -2,18 +2,17 @@
   "name": "@repo/better-auth-hook",
   "version": "0.0.0",
   "description": "Better Auth Hook",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
+  "main": "./src/index.ts",
+  "types": "./src/index.ts",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
+      "types": "./src/index.ts",
+      "import": "./src/index.ts",
+      "default": "./src/index.ts"
     }
   },
   "scripts": {
-    "dev": "tsdown --watch ./src",
+    "_dev": "tsdown --watch ./src",
     "build": "tsdown",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
     "check-types": "tsc --noEmit",
