feat: Introduce Playwright for end-to-end testing in the web-with-auth application, including configuration, example tests, and related environment and server adjustments.

--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -6,6 +6,6 @@ WEB_APP_URL="http://localhost:3001"
 NATIVE_APP_SCHEME="my-app://"
 
 # Better Auth
-BETTER_AUTH_SECRET="<A randomly generated secret>"
+BETTER_AUTH_SECRET="01234567890123456789012345678901"
 DATABASE_URL="pg://postgres:postgres@localhost:5432"
 REDIS_URL="redis://redis:redis@localhost:6379"
