--- a/apps/web-with-auth/package.json
+++ b/apps/web-with-auth/package.json
@@ -50,7 +50,7 @@
     "zustand": "^5.0.10"
   },
   "devDependencies": {
-    "@playwright/test": "^1.58.0",
+    "@playwright/test": "1.56.1",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "catalog:",
     "@types/react": "catalog:",
