--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "pnpm dlx ultracite fix",
     "test": "turbo test",
     "test:e2e": "turbo test:e2e",
+    "test:e2e:ui": "turbo test:e2e:ui",
     "db:generate": "turbo db:generate",
     "db:migrate": "turbo db:migrate",
     "check-types": "turbo check-types",
@@ -34,6 +35,7 @@
   "packageManager": "pnpm@10.28.1",
   "pnpm": {
     "overrides": {
+      "@playwright/test": "1.56.1",
       "@tanstack/react-query": "5.90.19",
       "better-auth": "1.4.17",
       "drizzle-orm": "0.45.1",
