--- a/turbo.json
+++ b/turbo.json
@@ -23,6 +23,9 @@
     "test:e2e": {
       "cache": false
     },
+    "test:e2e:ui": {
+      "cache": false
+    },
     "check-types": {
       "cache": false
     },
