--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -7,6 +7,10 @@
     "dev": "tsx watch src/index.ts",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
     "check-types": "tsc -b",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:coverage:html": "open coverage/index.html",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
@@ -33,8 +37,10 @@
   },
   "devDependencies": {
     "@types/node": "catalog:",
+    "@vitest/coverage-v8": "^4.0.0",
     "drizzle-kit": "^0.31.8",
     "tsx": "^4.21.0",
-    "typescript": "catalog:"
+    "typescript": "catalog:",
+    "vitest": "catalog:"
   }
 }
