--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "clean": "turbo clean",
     "lint": "pnpm dlx ultracite fix",
     "test": "turbo test",
+    "test:coverage": "turbo test:coverage",
     "test:e2e": "turbo test:e2e",
     "test:e2e:ui": "turbo test:e2e:ui",
     "db:generate": "turbo db:generate",
