--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,11 +4,12 @@ packages:
   - "examples/*"
 
 catalog:
-  "@types/node": ^25.0.9
-  "@types/react": ^19.2.8
+  "@types/node": ^25.0.10
+  "@types/react": ^19.2.9
   "@types/react-dom": ^19.2.3
-  react: ^19.2.3
-  react-dom: ^19.2.3
-  tsdown: ^0.19.0
+  "@vitest/coverage-v8": ^4.0.18
+  react: ^19.2.4
+  react-dom: ^19.2.4
+  tsdown: ^0.20.1
   typescript: ^5.9.3
-  vitest: ^4.0.17
+  vitest: ^4.0.18
